--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -14,13 +14,17 @@
 
     <!-- main angular files -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.10/angular.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.10/angular-route.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.10/angular-animate.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.10/angular-touch.js"></script>
+    <script type="text/javascript" src="bower_components/angularUtils-pagination/dirPagination.js"></script>
     <script src="app/app.js" type="text/javascript"></script>
+    <script src="app/routes.js" type="text/javascript"></script>
     <!-- // <script src="assets/js/ui-bootstrap-tpls-2.5.0.min.js" type="text/javascript"></script> -->
 
     <!-- angular controllers -->
     <script src="app/controllers/mainCtrl.js" type="text/javascript"></script>
+    <script src="app/controllers/resultCtrl.js" type="text/javascript"></script>
 
     <!-- angular services -->
     <script src="app/services/dataService.js" type="text/javascript"></script>
@@ -38,31 +42,24 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Replorer!</a>
+          <a class="navbar-brand" href="/">Replorer!</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
-        
+       	  <ul class="nav navbar-nav navbar-right">
+	        <li><a href="/">Home</a></li>
+	        <li><a href="/">Search</a></li>
+
+	      </ul>
         </div>
       </div>
     </nav>
 
-      <div class="container tm50">
-        <h1>search</h1>
-        <input type="text" class="form-control" name="searchKeyword" placeholder="Search repo..." ng-model="searchKeyword">
-        <button class="btn btn-default" type="button" ng-click="main.search(searchKeyword);">Search</button>
+    <div ng-view>
+
+
     </div>
 
-    <div class="container">
-        <h1>result</h1>
-        <div class="list-group" ng-repeat="item in main.items">
-          <a href="#" class="list-group-item">
-            <h4 class="list-group-item-heading">{{item.name}}</h4>
-            <p class="list-group-item-text">{{item.clone_url}}</p>
-            <p class="list-group-item-text">by {{item.owner.login}}</p>
-          </a>
-        </div>
-    </div>
-
+    
 
 
 
