--- a/public/app/views/result.html
+++ b/public/app/views/result.html
@@ -1,33 +1,33 @@
+<div class="sk-fading-circle" ng-show="result.loading">
+	<div class="sk-circle1 sk-circle"></div>
+	<div class="sk-circle2 sk-circle"></div>
+	<div class="sk-circle3 sk-circle"></div>
+	<div class="sk-circle4 sk-circle"></div>
+	<div class="sk-circle5 sk-circle"></div>
+	<div class="sk-circle6 sk-circle"></div>
+	<div class="sk-circle7 sk-circle"></div>
+	<div class="sk-circle8 sk-circle"></div>
+	<div class="sk-circle9 sk-circle"></div>
+	<div class="sk-circle10 sk-circle"></div>
+	<div class="sk-circle11 sk-circle"></div>
+	<div class="sk-circle12 sk-circle"></div>
+</div>
 
+<div class="alert alert-danger show-hide-message" role="alert" ng-show='result.errorMsg'><p>{{result.errorMsg}}</p></div>
 
-<div class="container tm100">
-
-	<div class="sk-fading-circle" ng-show="result.loading">
-		<div class="sk-circle1 sk-circle"></div>
-		<div class="sk-circle2 sk-circle"></div>
-		<div class="sk-circle3 sk-circle"></div>
-		<div class="sk-circle4 sk-circle"></div>
-		<div class="sk-circle5 sk-circle"></div>
-		<div class="sk-circle6 sk-circle"></div>
-		<div class="sk-circle7 sk-circle"></div>
-		<div class="sk-circle8 sk-circle"></div>
-		<div class="sk-circle9 sk-circle"></div>
-		<div class="sk-circle10 sk-circle"></div>
-		<div class="sk-circle11 sk-circle"></div>
-		<div class="sk-circle12 sk-circle"></div>
-	</div>
-
-	<div class="alert alert-danger show-hide-message" role="alert" ng-show='result.errorMsg'><p>{{result.errorMsg}}</p></div>	
+<div class="container tm100" ng-show="result.loaded">	
 	<ul class="nav nav-tabs">
 		<li role="presentation" ng-click="result.showDetails();" ng-class="detailsTab"><a href="#">Details</a></li>
 		<li role="presentation" ng-click="result.showIssues();" ng-class="issuesTab"><a href="#">Issues</a></li>
 	</ul>
+
+	<!-- detailsPhase -->
 	<div class="panel panel-default" ng-show="result.detailsPhase">
 		<div class="panel-body">
 			<p>Name: {{result.name}}</p>
 			<p>URL: <a ng-href="{{result.url}}">{{result.url}}</a></p>
 			<p>Description: {{result.description}}</p>
-			<p>Created by: {{result.owner}}</p>
+			<p>Created by: <a ng-href="{{result.owner_url}}">{{result.owner}}</a></p>
 		</div>
 		<ul class="list-group">
 			<li class="list-group-item">
@@ -47,6 +47,21 @@
 				Watchers
 			</li>
 		</ul>
+	</div>
+
+	<!-- issuesPhase -->
+	<div class="panel panel-default" ng-show="result.issuesPhase">
+		<div class="panel-body">
+			Open issues: {{result.open_issues}}
+		</div>
+		<div class="list-group">
+			<a ng-href="{{issue.html_url}}" class="list-group-item" dir-paginate="issue in result.issues | itemsPerPage: result.pageSize">
+			<strong>{{issue.title}}</strong>
+			<br>
+			Created by: {{issue.user.login}}
+			</a>
+		</div>
+		<dir-pagination-controls boundary-links="true" class="center"></dir-pagination-controls>
 	</div>
 </div>
 
